fix: attempt to make footer visible on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,7 @@ main {
     display: flex;
     align-items: self-start;
     justify-content: center;
-    /* padding: 20px; */
+    padding-bottom: 20px;
 }
 
 
